force-app/main/default/objects/hed_Course_Enrollment__x/hed_Course_Enrollment__x.object-meta.xml
<CustomObject>
    <description>Supplies data from Ed Plus org on the Contact page section "EdPlus Salesforce - Earned Admissions"</description>
    <externalDataSource>EdPlusCrossOrg</externalDataSource>
    <externalName>hed__Course_Enrollment__c</externalName>
    <label>Course Connection (EdPlus)</label>
    <pluralLabel>Course Connections (EdPlus)</pluralLabel>
</CustomObject>