force-app/main/default/objects/hed_Course_Enrollment__x/fields/ASU_Credit_Date__c.field-meta.xml
<CustomField>
    <fullName>ASU_Credit_Date__c</fullName>
    <externalDeveloperName>ASU_Credit_Date__c</externalDeveloperName>
    <label>ASU Credit Date</label>
    <type>Date</type>
</CustomField>