force-app/main/default/objects/hed_Course_Enrollment__x/fields/Benefit_Type__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Type__c</fullName>
    <externalDeveloperName>Benefit_Type__c</externalDeveloperName>
    <inlineHelpText>1 - Partner Pays Eligibility and Conversion
2- Partner Pays Eligibility, Learner Pays Conversion
3- Learner Pays Eligibility, Partner Pays Conversion
4- Learner Pays Eligibility and Conversion</inlineHelpText>
    <label>Benefit Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>