force-app/main/default/objects/hed_Course_Enrollment__x/fields/Benefits_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Benefits_Eligible__c</externalDeveloperName>
    <label>Benefits Eligible</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>