force-app/main/default/objects/hed_Course_Enrollment__x/fields/Budget_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Budget_Confirmed__c</fullName>
    <externalDeveloperName>Budget_Confirmed__c</externalDeveloperName>
    <label>Budget Confirmed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>