force-app/main/default/objects/hed_Course_Enrollment__x/fields/Certificate_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Delivered__c</fullName>
    <externalDeveloperName>Certificate_Delivered__c</externalDeveloperName>
    <label>Certificate Delivered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>