force-app/main/default/objects/hed_Course_Enrollment__x/fields/Certificate_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Eligible__c</fullName>
    <externalDeveloperName>Certificate_Eligible__c</externalDeveloperName>
    <label>Certificate Eligible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>