force-app/main/default/objects/hed_Course_Enrollment__x/fields/Certificate_Type__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Type__c</fullName>
    <externalDeveloperName>Certificate_Type__c</externalDeveloperName>
    <label>Certificate Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>