force-app/main/default/objects/hed_Course_Enrollment__x/fields/Contact_Course_Connection_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Course_Connection_ID__c</fullName>
    <externalDeveloperName>Contact_Course_Connection_ID__c</externalDeveloperName>
    <label>Contact_Course Connection ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>