force-app/main/default/objects/hed_Course_Enrollment__x/fields/Copy_of_ID_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Copy_of_ID_Verified_Date__c</fullName>
    <externalDeveloperName>Copy_of_ID_Verified_Date__c</externalDeveloperName>
    <label>Copy of ID Verified Date</label>
    <type>Date</type>
</CustomField>