force-app/main/default/objects/hed_Course_Enrollment__x/fields/Course_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Completed_Date__c</fullName>
    <externalDeveloperName>Course_Completed_Date__c</externalDeveloperName>
    <label>Course Completed Date</label>
    <type>Date</type>
</CustomField>