force-app/main/default/objects/hed_Course_Enrollment__x/fields/Course_Connection_Origin__c.field-meta.xml
<CustomField>
    <fullName>Course_Connection_Origin__c</fullName>
    <externalDeveloperName>Course_Connection_Origin__c</externalDeveloperName>
    <label>Course Connection Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>