force-app/main/default/objects/hed_Course_Enrollment__x/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <externalDeveloperName>Course_Name__c</externalDeveloperName>
    <label>Course Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>