force-app/main/default/objects/hed_Course_Enrollment__x/fields/Course_Offering__c.field-meta.xml
<CustomField>
    <fullName>Course_Offering__c</fullName>
    <externalDeveloperName>OpenEdX_Course_Id__c</externalDeveloperName>
    <label>Course Offering</label>
    <length>255</length>
    <type>Text</type>
</CustomField>