force-app/main/default/objects/hed_Course_Enrollment__x/fields/Course_Offering_Progress__c.field-meta.xml
<CustomField>
    <fullName>Course_Offering_Progress__c</fullName>
    <externalDeveloperName>Course_Offering_Progress__c</externalDeveloperName>
    <label>Course Offering Progress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>