force-app/main/default/objects/hed_Course_Enrollment__x/fields/Course_Overload_Check__c.field-meta.xml
<CustomField>
    <fullName>Course_Overload_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Course_Overload_Check__c</externalDeveloperName>
    <label>Course Overload Check</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>