force-app/main/default/objects/hed_Course_Enrollment__x/fields/Course_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Course_Prefix__c</fullName>
    <externalDeveloperName>Course_Prefix__c</externalDeveloperName>
    <label>Course Prefix</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>