force-app/main/default/objects/hed_Course_Enrollment__x/fields/Course_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Start_Date__c</fullName>
    <externalDeveloperName>Course_Start_Date__c</externalDeveloperName>
    <label>Course Start Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>