force-app/main/default/objects/hed_Course_Enrollment__x/fields/Course_Type__c.field-meta.xml
<CustomField>
    <fullName>Course_Type__c</fullName>
    <externalDeveloperName>Course_Type__c</externalDeveloperName>
    <label>Course Type</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>