force-app/main/default/objects/hed_Course_Enrollment__x/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <externalDeveloperName>CreatedDate</externalDeveloperName>
    <label>Created Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>