force-app/main/default/objects/hed_Course_Enrollment__x/fields/Credit_Converted_BE_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Converted_BE_Status__c</fullName>
    <externalDeveloperName>Credit_Converted_BE_Status__c</externalDeveloperName>
    <label>Credit Converted BE Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>