force-app/main/default/objects/hed_Course_Enrollment__x/fields/Credit_Converted_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Converted_Date__c</fullName>
    <externalDeveloperName>Credit_Converted_Date__c</externalDeveloperName>
    <label>Credit Converted Date</label>
    <type>Date</type>
</CustomField>