force-app/main/default/objects/hed_Course_Enrollment__x/fields/Credit_eligible__c.field-meta.xml
<CustomField>
    <fullName>Credit_eligible__c</fullName>
    <externalDeveloperName>Credit_eligible__c</externalDeveloperName>
    <label>Credit Eligible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>