force-app/main/default/objects/hed_Course_Enrollment__x/fields/Current_Grade__c.field-meta.xml
<CustomField>
    <fullName>Current_Grade__c</fullName>
    <externalDeveloperName>Current_Grade__c</externalDeveloperName>
    <label>Current Grade</label>
    <length>20</length>
    <type>Text</type>
</CustomField>