force-app/main/default/objects/hed_Course_Enrollment__x/fields/Days_Since_Last_Login__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Login__c</fullName>
    <externalDeveloperName>Days_Since_Last_Login__c</externalDeveloperName>
    <label>Days Since Last Login</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>