force-app/main/default/objects/hed_Course_Enrollment__x/fields/Discovery_Completed__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Completed__c</fullName>
    <externalDeveloperName>Discovery_Completed__c</externalDeveloperName>
    <label>Discovery Completed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>