force-app/main/default/objects/hed_Course_Enrollment__x/fields/EA_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>EA_Lead_Source__c</fullName>
    <externalDeveloperName>EA_Lead_Source__c</externalDeveloperName>
    <label>EA Lead Source</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>