force-app/main/default/objects/hed_Course_Enrollment__x/fields/EA_Learner_Application__c.field-meta.xml
<CustomField>
    <fullName>EA_Learner_Application__c</fullName>
    <externalDeveloperName>EA_Learner_Application__c</externalDeveloperName>
    <label>EA Learner Application</label>
    <length>18</length>
    <referenceTo>EA_Learner_Application__x</referenceTo>
    <relationshipLabel>Course Connections</relationshipLabel>
    <relationshipName>Course_Connections</relationshipName>
    <type>ExternalLookup</type>
</CustomField>