force-app/main/default/objects/hed_Course_Enrollment__x/fields/edX_Final__c.field-meta.xml
<CustomField>
    <fullName>edX_Final__c</fullName>
    <externalDeveloperName>edX_Final__c</externalDeveloperName>
    <label>Final</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>