force-app/main/default/objects/hed_Course_Enrollment__x/fields/edX_Midterm__c.field-meta.xml
<CustomField>
    <fullName>edX_Midterm__c</fullName>
    <externalDeveloperName>edX_Midterm__c</externalDeveloperName>
    <label>Midterm</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>