force-app/main/default/objects/hed_Course_Enrollment__x/fields/Eligibility_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_End_Date__c</fullName>
    <externalDeveloperName>Eligibility_End_Date__c</externalDeveloperName>
    <label>Eligibility End Date</label>
    <type>Date</type>
</CustomField>