force-app/main/default/objects/hed_Course_Enrollment__x/fields/Enrollment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Mode__c</fullName>
    <externalDeveloperName>Enrollment_Mode__c</externalDeveloperName>
    <label>Enrollment Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>