force-app/main/default/objects/hed_Course_Enrollment__x/fields/Enrollment_Mode_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Mode_Verified_Date__c</fullName>
    <externalDeveloperName>Enrollment_Mode_Verified_Date__c</externalDeveloperName>
    <label>Enrollment Mode Verified Date</label>
    <type>DateTime</type>
</CustomField>