force-app/main/default/objects/hed_Course_Enrollment__x/fields/Enrollment_Track__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Track__c</fullName>
    <externalDeveloperName>Enrollment_Track__c</externalDeveloperName>
    <label>Enrollment Track</label>
    <length>255</length>
    <type>Text</type>
</CustomField>