force-app/main/default/objects/hed_Course_Enrollment__x/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Expired__c</externalDeveloperName>
    <label>Expired</label>
    <type>Checkbox</type>
</CustomField>