force-app/main/default/objects/hed_Course_Enrollment__x/fields/Final_Grade__c.field-meta.xml
<CustomField>
    <fullName>Final_Grade__c</fullName>
    <externalDeveloperName>Final_Grade__c</externalDeveloperName>
    <label>Final Grade</label>
    <length>4</length>
    <type>Text</type>
</CustomField>