force-app/main/default/objects/hed_Course_Enrollment__x/fields/Funding_Source_s__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source_s__c</fullName>
    <externalDeveloperName>Funding_Source_s__c</externalDeveloperName>
    <label>Funding Source(s)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>