force-app/main/default/objects/hed_Course_Enrollment__x/fields/hed_Account__c.field-meta.xml
<CustomField>
    <fullName>hed_Account__c</fullName>
    <externalDeveloperName>hed__Account__c</externalDeveloperName>
    <inlineHelpText>The Academic Program the student is enrolled in.</inlineHelpText>
    <label>Contact's Academic Program</label>
    <length>18</length>
    <type>Text</type>
</CustomField>