force-app/main/default/objects/hed_Course_Enrollment__x/fields/hed_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>hed_Affiliation__c</fullName>
    <externalDeveloperName>hed__Affiliation__c</externalDeveloperName>
    <label>Affiliation</label>
    <length>18</length>
    <type>Text</type>
</CustomField>