force-app/main/default/objects/hed_Course_Enrollment__x/fields/hed_Contact__c.field-meta.xml
<CustomField>
    <fullName>hed_Contact__c</fullName>
    <externalDeveloperName>Id</externalDeveloperName>
    <inlineHelpText>The student taking the course.</inlineHelpText>
    <label>Contact</label>
    <length>18</length>
    <referenceTo>EdPlusContact__x</referenceTo>
    <relationshipLabel>Course Connections</relationshipLabel>
    <relationshipName>Course_Connections</relationshipName>
    <type>ExternalLookup</type>
</CustomField>