force-app/main/default/objects/hed_Course_Enrollment__x/fields/hed_Course_Offering__c.field-meta.xml
<CustomField>
    <fullName>hed_Course_Offering__c</fullName>
    <externalDeveloperName>hed__Course_Offering__c</externalDeveloperName>
    <inlineHelpText>The Course Offering the student is enrolled in. It's a Course offered at a specific Term.</inlineHelpText>
    <label>Course Offering ID</label>
    <length>18</length>
    <referenceTo>hed_Course_Offering__x</referenceTo>
    <relationshipLabel>Course Connections</relationshipLabel>
    <relationshipName>Course_Connections</relationshipName>
    <type>ExternalLookup</type>
</CustomField>