force-app/main/default/objects/hed_Course_Enrollment__x/fields/hed_Credits_Attempted__c.field-meta.xml
<CustomField>
    <fullName>hed_Credits_Attempted__c</fullName>
    <externalDeveloperName>hed__Credits_Attempted__c</externalDeveloperName>
    <label>Credits Attempted</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>