force-app/main/default/objects/hed_Course_Enrollment__x/fields/hed_Grade__c.field-meta.xml
<CustomField>
    <fullName>hed_Grade__c</fullName>
    <externalDeveloperName>hed__Grade__c</externalDeveloperName>
    <label>Grade</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>