force-app/main/default/objects/hed_Course_Enrollment__x/fields/hed_Primary__c.field-meta.xml
<CustomField>
    <fullName>hed_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>hed__Primary__c</externalDeveloperName>
    <inlineHelpText>Represents a Primary Course Connection.</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>