force-app/main/default/objects/hed_Course_Enrollment__x/fields/hed_Program_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>hed_Program_Enrollment__c</fullName>
    <externalDeveloperName>hed__Program_Enrollment__c</externalDeveloperName>
    <inlineHelpText>The Program the student is enrolled in. Links a student with an Academic Program.</inlineHelpText>
    <label>Program Enrollment ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>