force-app/main/default/objects/hed_Course_Enrollment__x/fields/hed_Status__c.field-meta.xml
<CustomField>
    <fullName>hed_Status__c</fullName>
    <externalDeveloperName>hed__Status__c</externalDeveloperName>
    <inlineHelpText>Represents the Status of the Course Connection.</inlineHelpText>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>