force-app/main/default/objects/hed_Course_Enrollment__x/fields/ID_Verification_Deadline__c.field-meta.xml
<CustomField>
    <fullName>ID_Verification_Deadline__c</fullName>
    <externalDeveloperName>ID_Verification_Deadline__c</externalDeveloperName>
    <label>ID Verification Deadline</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>