force-app/main/default/objects/hed_Course_Enrollment__x/fields/ID_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>ID_Verified_Date__c</fullName>
    <externalDeveloperName>ID_Verified_Date__c</externalDeveloperName>
    <label>ID Verified Date</label>
    <type>Date</type>
</CustomField>