force-app/main/default/objects/hed_Course_Enrollment__x/fields/ID_Verified_Date_From_Learner__c.field-meta.xml
<CustomField>
    <fullName>ID_Verified_Date_From_Learner__c</fullName>
    <externalDeveloperName>ID_Verified_Date_From_Learner__c</externalDeveloperName>
    <label>ID Verified Date From Learner</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>