force-app/main/default/objects/hed_Course_Enrollment__x/fields/ID_Verify_From_Learner__c.field-meta.xml
<CustomField>
    <fullName>ID_Verify_From_Learner__c</fullName>
    <externalDeveloperName>ID_Verify_From_Learner__c</externalDeveloperName>
    <label>ID Verify From Learner</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>