force-app/main/default/objects/hed_Course_Enrollment__x/fields/Is_Proctoring_Exam_Found__c.field-meta.xml
<CustomField>
    <fullName>Is_Proctoring_Exam_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Is_Proctoring_Exam_Found__c</externalDeveloperName>
    <label>Is Proctoring Exam Found</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>