force-app/main/default/objects/hed_Course_Enrollment__x/fields/Last_Login_in_course__c.field-meta.xml
<CustomField>
    <fullName>Last_Login_in_course__c</fullName>
    <externalDeveloperName>Last_Login_in_course__c</externalDeveloperName>
    <label>Last Login in course</label>
    <type>DateTime</type>
</CustomField>