force-app/main/default/objects/hed_Course_Enrollment__x/fields/LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedById__c</fullName>
    <externalDeveloperName>LastModifiedById</externalDeveloperName>
    <label>Last Modified By ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>