force-app/main/default/objects/hed_Course_Enrollment__x/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <externalDeveloperName>LastModifiedDate</externalDeveloperName>
    <label>Last Modified Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>