force-app/main/default/objects/hed_Course_Enrollment__x/fields/Number_of_Credits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Credits__c</fullName>
    <externalDeveloperName>Number_of_Credits__c</externalDeveloperName>
    <label>Number of Credits</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>