force-app/main/default/objects/hed_Course_Enrollment__x/fields/Number_Of_Credits_Converted__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Credits_Converted__c</fullName>
    <externalDeveloperName>Number_Of_Credits_Converted__c</externalDeveloperName>
    <label>Number Of Credits Converted</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>