force-app/main/default/objects/hed_Course_Enrollment__x/fields/Number_Of_Credits_Earned__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Credits_Earned__c</fullName>
    <externalDeveloperName>Number_Of_Credits_Earned__c</externalDeveloperName>
    <label>Number Of Credits Earned</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>