force-app/main/default/objects/hed_Course_Enrollment__x/fields/OEA_Partner__c.field-meta.xml
<CustomField>
    <fullName>OEA_Partner__c</fullName>
    <externalDeveloperName>OEA_Partner__c</externalDeveloperName>
    <label>OEA Partner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>