force-app/main/default/objects/hed_Course_Enrollment__x/fields/OEA_Partner_Override__c.field-meta.xml
<CustomField>
    <fullName>OEA_Partner_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>OEA_Partner_Override__c</externalDeveloperName>
    <label>OEA Partner Override</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>