force-app/main/default/objects/hed_Course_Enrollment__x/fields/OEA_Partner_Override_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>OEA_Partner_Override_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>OEA_Partner_Override_Checkbox__c</externalDeveloperName>
    <label>OEA Partner Override Checkbox</label>
    <type>Checkbox</type>
</CustomField>