force-app/main/default/objects/hed_Course_Enrollment__x/fields/OpenEdX_Course_Id__c.field-meta.xml
<CustomField>
    <fullName>OpenEdX_Course_Id__c</fullName>
    <externalDeveloperName>OpenEdX_Course_Id__c</externalDeveloperName>
    <label>OpenEdX Course Id</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>