force-app/main/default/objects/hed_Course_Enrollment__x/fields/Opt_In_Before_Course__c.field-meta.xml
<CustomField>
    <fullName>Opt_In_Before_Course__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Opt_In_Before_Course__c</externalDeveloperName>
    <label>Opt In Before Course</label>
    <type>Checkbox</type>
</CustomField>