force-app/main/default/objects/hed_Course_Enrollment__x/fields/P2A_Certs_date__c.field-meta.xml
<CustomField>
    <fullName>P2A_Certs_date__c</fullName>
    <externalDeveloperName>P2A_Certs_date__c</externalDeveloperName>
    <label>P2A Certs date</label>
    <type>Date</type>
</CustomField>