force-app/main/default/objects/hed_Course_Enrollment__x/fields/Partner_Benefit_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Benefit_Type__c</fullName>
    <externalDeveloperName>Partner_Benefit_Type__c</externalDeveloperName>
    <label>Partner Benefit Type</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>