force-app/main/default/objects/hed_Course_Enrollment__x/fields/Passing__c.field-meta.xml
<CustomField>
    <fullName>Passing__c</fullName>
    <externalDeveloperName>Passing__c</externalDeveloperName>
    <label>Passing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>