force-app/main/default/objects/hed_Course_Enrollment__x/fields/Prepaid_Credit_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Prepaid_Credit_Eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Prepaid_Credit_Eligibility__c</externalDeveloperName>
    <label>Prepaid Credit Eligibility</label>
    <type>Checkbox</type>
</CustomField>