force-app/main/default/objects/hed_Course_Enrollment__x/fields/Proctoring_Status__c.field-meta.xml
<CustomField>
    <fullName>Proctoring_Status__c</fullName>
    <externalDeveloperName>Proctoring_Status__c</externalDeveloperName>
    <label>Proctoring Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>