force-app/main/default/objects/hed_Course_Enrollment__x/fields/RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId__c</fullName>
    <externalDeveloperName>RecordTypeId</externalDeveloperName>
    <label>Record Type ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>