force-app/main/default/objects/hed_Course_Enrollment__x/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <externalDeveloperName>Registration_Date__c</externalDeveloperName>
    <label>Registration Date</label>
    <type>Date</type>
</CustomField>