force-app/main/default/objects/hed_Course_Enrollment__x/fields/SCE_Mode__c.field-meta.xml
<CustomField>
    <fullName>SCE_Mode__c</fullName>
    <externalDeveloperName>SCE_Mode__c</externalDeveloperName>
    <label>SCE Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>