force-app/main/default/objects/hed_Course_Enrollment__x/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <externalDeveloperName>Stage__c</externalDeveloperName>
    <label>Stage</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>