force-app/main/default/objects/hed_Course_Enrollment__x/fields/Start_Class_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Start_Class_Eligible__c</fullName>
    <externalDeveloperName>Start_Class_Eligible__c</externalDeveloperName>
    <label>Start Class Eligible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>