force-app/main/default/objects/hed_Course_Enrollment__x/fields/Term_CC__c.field-meta.xml
<CustomField>
    <fullName>Term_CC__c</fullName>
    <externalDeveloperName>Term_CC__c</externalDeveloperName>
    <label>Term_CC</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>