force-app/main/default/objects/hed_Course_Enrollment__x/fields/Termed_Before_Class_End__c.field-meta.xml
<CustomField>
    <fullName>Termed_Before_Class_End__c</fullName>
    <externalDeveloperName>Termed_Before_Class_End__c</externalDeveloperName>
    <label>Termed Before Class End</label>
    <type>DateTime</type>
</CustomField>