force-app/main/default/objects/hed_Course_Enrollment__x/fields/Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Verification_Status__c</fullName>
    <externalDeveloperName>Verification_Status__c</externalDeveloperName>
    <label>Verification Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>